--- a/package.json
+++ b/package.json
@@ -18,20 +18,9 @@
   },
   "homepage": "https://github.com/lavibi/daki#readme",
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "cssnano": "^4.1.10",
-    "express": "^4.17.1",
-    "gulp": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "postcss": "^7.0.32",
-    "postcss-import": "^12.0.1",
-    "tailwindcss": "^1.6.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
-  },
-  "browserslist": [
-    "defaults",
-    "last 1 versions"
-  ]
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.11"
+  }
 }
